--- a/Software/Try02Hal/Try02Hal.ioc
+++ b/Software/Try02Hal/Try02Hal.ioc
@@ -123,7 +123,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
+ProjectManager.KeepUserCode=false
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
